# rag_lang

./: .gitignore  README.md  README_zh.md  environment.yml  pyproject.toml  requirements.txt
.cursor/rules/: _global.mdc  _project.mdc  project-update-rules.mdc  project-worktrees.mdc  pull-request-create.mdc  scripts-create.mdc  task-execute.mdc  task-plan.mdc
.specstory/history/: 2025-05-17_03-53-整体工作区审查.md
chroma/: chroma.sqlite3
data/: sample_for_test.txt
docs/: PLAN.md  PLAN_zh.md  PRD.md  PRD_zh.md  RESEARCH.md  RESEARCH_zh.md  TECH_SPEC.md  TECH_SPEC_zh.md  WORKSPACE_OVERVIEW.md  WORKSPACE_OVERVIEW_zh.md  rag_lang.code-workspace
src/rag_lang/: cli.py
src/rag_lang/core/: config.py  generator.py  loader.py  retriever.py  splitter.py  vector_store.py
src/rag_lang/pipelines/: baseline_rag.py
tests/core/: test_config.py  test_generator.py  test_loader.py  test_splitter.py
tests/data_for_tests/: sample.md  sample.txt
